# faramir

./: Cargo.toml  Makefile  README.md  rustfmt.toml  todo.md
src/: clap.yml  db.rs  errors.rs  main.rs  timer.rs  utils.rs
src/models/: config.rs  event.rs  mod.rs  project.rs  tag.rs  timer.rs
