[package]
name = "faramir"
version = "0.1.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5.1"
clap = { version = "2.33.0", features = ["yaml"] }
rand = "0.7.2"
rusqlite = { version = "0.21.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
termcolor = "1"
